tests/semantic/undeclared.expected

Semantic Error [line 2]: 
	Use of undeclared identifier 'something'.
