tests/semantic/undeclared.mtp
begin
	if something = 10 then
		something := 5
	

end.